--- a/src/locales/messages.es-CL.xlf
+++ b/src/locales/messages.es-CL.xlf
@@ -63,6 +63,14 @@
         </context-group>
         <note priority="1" from="description">Message of success after deleting a salesperson with first name {{ firstName }} and last name {{ lastName }}</note>
       </trans-unit>
+      <trans-unit id="4322964496601388916" datatype="html">
+        <source>Ente repartidor &apos;<x id="name" equiv-text="shipper.name"/>&apos; eliminado</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/management/routes/shippers/shipper-manager.component.ts</context>
+          <context context-type="linenumber">70</context>
+        </context-group>
+        <note priority="1" from="description">Message of success after deleting a shipper with name {{ name }}</note>
+      </trans-unit>
       <trans-unit id="5c7012b5a926b32d9e45fefdcc8a1a3cb6f023d0" datatype="html">
         <source>Ciudad</source>
         <context-group purpose="location">
@@ -542,6 +550,14 @@
         <note priority="1" from="description">Label with sell total value (products, transport and taxes) being {{ totalValue }}</note>
         <note priority="1" from="meaning">total sell value</note>
       </trans-unit>
+      <trans-unit id="cff1428d10d59d14e45edec3c735a27b5482db59" datatype="html">
+        <source>Nombre</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/shared/components/shipper-form/shipper-form.component.html</context>
+          <context context-type="linenumber">11</context>
+        </context-group>
+        <note priority="1" from="description">Name of field for the identifiying name of a shipper or shipping service</note>
+      </trans-unit>
       <trans-unit id="44ad6e8ded61058a394ed7b1486cbf0aca144198" datatype="html">
         <source>Imagen no disponible</source>
         <context-group purpose="location">
@@ -573,6 +589,7 @@
           <context context-type="linenumber">17</context>
         </context-group>
         <note priority="1" from="description">Name of field for password to create user with</note>
+        <note priority="1" from="meaning">password field</note>
       </trans-unit>
       <trans-unit id="71c355c28431d7d6a5ab9bc97469bb60f459e7eb" datatype="html">
         <source>Identidad</source>
@@ -953,6 +970,14 @@
         </context-group>
         <note priority="1" from="description">Label to hint user that their billing information is solely used to secure their transaction</note>
       </trans-unit>
+      <trans-unit id="dcd47f4d6b26b045a1b041b2fc73123bc0cfc118" datatype="html">
+        <source>Iniciar Sesión</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/store/dialogs/login-form/store-login-form-dialog.component.html</context>
+          <context context-type="linenumber">8</context>
+        </context-group>
+        <note priority="1" from="description">Title of dialog prompt for logging in</note>
+      </trans-unit>
       <trans-unit id="0420ea6c714a79b1e7c9499d25c8b5d2916f23a7" datatype="html">
         <source>Nombre de usuario</source>
         <context-group purpose="location">
@@ -1145,6 +1170,22 @@
         <note priority="1" from="description">Title of widget displaying products and details of transaction</note>
         <note priority="1" from="meaning">transaction details title</note>
       </trans-unit>
+      <trans-unit id="5806543578000217592" datatype="html">
+        <source>Boleta</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/text/billing-type-names.ts</context>
+          <context context-type="linenumber">12</context>
+        </context-group>
+        <note priority="1" from="description">Form of billing commonly requested by most people; a simple statement with details of goods and services</note>
+      </trans-unit>
+      <trans-unit id="6763311202998995228" datatype="html">
+        <source>Factura</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/text/billing-type-names.ts</context>
+          <context context-type="linenumber">13</context>
+        </context-group>
+        <note priority="1" from="description">Form of billing requested by companies or their representatives; in addition to goods and services, some additional notes or charges (like taxes) may be included</note>
+      </trans-unit>
       <trans-unit id="8078321205268199838" datatype="html">
         <source>Hubo un error al procesar. Por favor, inténtelo de nuevo.</source>
         <context-group purpose="location">
@@ -1180,6 +1221,102 @@
         </context-group>
         <note priority="1" from="description">Label for button to dismiss warnings, errors and other messages</note>
         <note priority="1" from="meaning">common dismiss label</note>
+      </trans-unit>
+      <trans-unit id="3814505654507027228" datatype="html">
+        <source>Delivery Completado</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/text/sell-status-names.ts</context>
+          <context context-type="linenumber">9</context>
+        </context-group>
+        <note priority="1" from="description">Description of status of a sell after its contents have been delivered to the customer</note>
+      </trans-unit>
+      <trans-unit id="945086919382619829" datatype="html">
+        <source>En Delivery</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/text/sell-status-names.ts</context>
+          <context context-type="linenumber">10</context>
+        </context-group>
+        <note priority="1" from="description">Description of status of a sell after it has been shipped</note>
+      </trans-unit>
+      <trans-unit id="4341485281404939936" datatype="html">
+        <source>Pagada y Confirmada</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/text/sell-status-names.ts</context>
+          <context context-type="linenumber">11</context>
+        </context-group>
+        <note priority="1" from="description">Description of status of a sell after being acknowledged and confirmed by a salesperson, store clerk, or the next responsible individual</note>
+      </trans-unit>
+      <trans-unit id="813244575473708025" datatype="html">
+        <source>Pagada, por Confirmar</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/text/sell-status-names.ts</context>
+          <context context-type="linenumber">12</context>
+        </context-group>
+        <note priority="1" from="description">Description of status of a sell once payment has been processed, and needs confirmation from the store</note>
+      </trans-unit>
+      <trans-unit id="261729095639909855" datatype="html">
+        <source>Iniciada</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/text/sell-status-names.ts</context>
+          <context context-type="linenumber">13</context>
+        </context-group>
+        <note priority="1" from="description">Description of status of a sell once payment is requested; the customer must proceed to execute their transaction</note>
+      </trans-unit>
+      <trans-unit id="4416413576346763682" datatype="html">
+        <source>Pendiente</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/text/sell-status-names.ts</context>
+          <context context-type="linenumber">14</context>
+        </context-group>
+        <note priority="1" from="description">Description of status of a sell right before requesting payment; customers may never see this state</note>
+      </trans-unit>
+      <trans-unit id="4739012010062717286" datatype="html">
+        <source>Pago Abortado</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/text/sell-status-names.ts</context>
+          <context context-type="linenumber">15</context>
+        </context-group>
+        <note priority="1" from="description">Description of a failed sell due to the transaction being aborted</note>
+      </trans-unit>
+      <trans-unit id="8105540508362589812" datatype="html">
+        <source>Pago Fallido</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/text/sell-status-names.ts</context>
+          <context context-type="linenumber">16</context>
+        </context-group>
+        <note priority="1" from="description">Description of a failed sell due to an uncertain transaction error</note>
+      </trans-unit>
+      <trans-unit id="6395733352391706880" datatype="html">
+        <source>Pago Rechazado</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/text/sell-status-names.ts</context>
+          <context context-type="linenumber">17</context>
+        </context-group>
+        <note priority="1" from="description">Description of a failed sell due to rejection of transaction (most likely, the card was declined)</note>
+      </trans-unit>
+      <trans-unit id="5501791863262140347" datatype="html">
+        <source>Delivery Cancelado</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/text/sell-status-names.ts</context>
+          <context context-type="linenumber">18</context>
+        </context-group>
+        <note priority="1" from="description">Description of a failed sell due to abortion of the delivery process</note>
+      </trans-unit>
+      <trans-unit id="6861171261641207722" datatype="html">
+        <source>Delivery Fallido</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/text/sell-status-names.ts</context>
+          <context context-type="linenumber">19</context>
+        </context-group>
+        <note priority="1" from="description">Description of a failed sell due to a failure in the delivery process</note>
+      </trans-unit>
+      <trans-unit id="1102912391897633655" datatype="html">
+        <source>Devuelta</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/text/sell-status-names.ts</context>
+          <context context-type="linenumber">20</context>
+        </context-group>
+        <note priority="1" from="description">Description of a failed sell due to its contents being returned</note>
       </trans-unit>
     </body>
   </file>
