--- a/src/locales/messages.es.xlf
+++ b/src/locales/messages.es.xlf
@@ -31,6 +31,70 @@
         </context-group>
         <note priority="1" from="description">Message of success after saving some data</note>
       </trans-unit>
+      <trans-unit id="6570363013146073520" datatype="html">
+        <source>Resumen</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
+          <context context-type="linenumber">34</context>
+        </context-group>
+        <note priority="1" from="description">Title of page for management dashboard</note>
+      </trans-unit>
+      <trans-unit id="7197870580140559288" datatype="html">
+        <source>Ventas</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
+          <context context-type="linenumber">41</context>
+        </context-group>
+        <note priority="1" from="description">Title of page for management of sales</note>
+      </trans-unit>
+      <trans-unit id="6707361102856436710" datatype="html">
+        <source>Productos</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
+          <context context-type="linenumber">49</context>
+        </context-group>
+        <note priority="1" from="description">Title of page for management of products</note>
+      </trans-unit>
+      <trans-unit id="8634025124141616528" datatype="html">
+        <source>Clientes</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
+          <context context-type="linenumber">57</context>
+        </context-group>
+        <note priority="1" from="description">Title of page for management of customers</note>
+      </trans-unit>
+      <trans-unit id="8313994991623438021" datatype="html">
+        <source>Vendedores</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
+          <context context-type="linenumber">65</context>
+        </context-group>
+        <note priority="1" from="description">Title of page for management of salespeople</note>
+      </trans-unit>
+      <trans-unit id="4555457172864212828" datatype="html">
+        <source>Usuarios</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
+          <context context-type="linenumber">73</context>
+        </context-group>
+        <note priority="1" from="description">Title of page for management of users</note>
+      </trans-unit>
+      <trans-unit id="414887388288176527" datatype="html">
+        <source>Imágenes</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
+          <context context-type="linenumber">81</context>
+        </context-group>
+        <note priority="1" from="description">Title of page for management of images</note>
+      </trans-unit>
+      <trans-unit id="7466971613843379326" datatype="html">
+        <source>Repartidores</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
+          <context context-type="linenumber">89</context>
+        </context-group>
+        <note priority="1" from="description">Title of page for management of shippers</note>
+      </trans-unit>
       <trans-unit id="7271324698069692652" datatype="html">
         <source>Imagen &apos;<x id="PH" equiv-text="img.filename"/>&apos;:fileName: eliminada</source>
         <context-group purpose="location">
