--- a/src/locales/messages.en-US.xlf
+++ b/src/locales/messages.en-US.xlf
@@ -2,6 +2,15 @@
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
   <file source-language="en-US" datatype="plaintext" original="ng2.template">
     <body>
+      <trans-unit id="836c7dac13adb2100460fcdd9ff0b613fa49dce3" datatype="html">
+        <source>Create</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/management/components/data-actions/management-data-actions.component.html</context>
+          <context context-type="linenumber">11</context>
+        </context-group>
+        <note priority="1" from="description">Label for action button to create an item</note>
+        <note priority="1" from="meaning">create new item</note>
+      </trans-unit>
       <trans-unit id="1b84cf7519640aaf2a1f706d33bfcb39d573e1c6" datatype="html">
         <source>Toggle sidebar</source>
         <context-group purpose="location">
@@ -254,7 +263,7 @@
         <source>Dashboard</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">34</context>
+          <context context-type="linenumber">28</context>
         </context-group>
         <note priority="1" from="description">Title of page for management dashboard</note>
       </trans-unit>
@@ -262,7 +271,7 @@
         <source>Sales</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">41</context>
+          <context context-type="linenumber">35</context>
         </context-group>
         <note priority="1" from="description">Title of page for management of sales</note>
       </trans-unit>
@@ -270,7 +279,7 @@
         <source>Products</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">49</context>
+          <context context-type="linenumber">43</context>
         </context-group>
         <note priority="1" from="description">Title of page for management of products</note>
       </trans-unit>
@@ -278,7 +287,7 @@
         <source>Customers</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">57</context>
+          <context context-type="linenumber">51</context>
         </context-group>
         <note priority="1" from="description">Title of page for management of customers</note>
       </trans-unit>
@@ -286,7 +295,7 @@
         <source>Salespeople</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">65</context>
+          <context context-type="linenumber">59</context>
         </context-group>
         <note priority="1" from="description">Title of page for management of salespeople</note>
       </trans-unit>
@@ -294,7 +303,7 @@
         <source>Users</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">73</context>
+          <context context-type="linenumber">67</context>
         </context-group>
         <note priority="1" from="description">Title of page for management of users</note>
       </trans-unit>
@@ -302,7 +311,7 @@
         <source>Images</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">81</context>
+          <context context-type="linenumber">75</context>
         </context-group>
         <note priority="1" from="description">Title of page for management of images</note>
       </trans-unit>
@@ -310,7 +319,7 @@
         <source>Shippers</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">89</context>
+          <context context-type="linenumber">83</context>
         </context-group>
         <note priority="1" from="description">Title of page for management of shippers</note>
       </trans-unit>
@@ -809,7 +818,7 @@
         </context-group>
         <note priority="1" from="description">Name of field for product name</note>
       </trans-unit>
-      <trans-unit id="beded590d746b7543eaf1c87419ad1391933b5de" datatype="html">
+      <trans-unit id="eec715de352a6b114713b30b640d319fa78207a0" datatype="html">
         <source>Description</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/shared/components/product-form/product-form.component.html</context>
@@ -986,7 +995,7 @@
         <note priority="1" from="description">Title of dialog to associate images to a product</note>
       </trans-unit>
       <trans-unit id="d4161422f3ecebfc6f0732afaa276ac82757612a" datatype="html">
-        <source>Search images by keyword</source>
+        <source>Search by keyword</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/shared/dialogs/images-array/images-array-dialog.component.html</context>
           <context context-type="linenumber">10</context>
