--- a/src/locales/messages.es.xlf
+++ b/src/locales/messages.es.xlf
@@ -2,6 +2,15 @@
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
   <file source-language="en-US" datatype="plaintext" original="ng2.template">
     <body>
+      <trans-unit id="836c7dac13adb2100460fcdd9ff0b613fa49dce3" datatype="html">
+        <source>Crear</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/management/components/data-actions/management-data-actions.component.html</context>
+          <context context-type="linenumber">11</context>
+        </context-group>
+        <note priority="1" from="description">Label for action button to create an item</note>
+        <note priority="1" from="meaning">create new item</note>
+      </trans-unit>
       <trans-unit id="1b84cf7519640aaf2a1f706d33bfcb39d573e1c6" datatype="html">
         <source>Alternar menú lateral</source>
         <context-group purpose="location">
@@ -254,7 +263,7 @@
         <source>Resumen</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">34</context>
+          <context context-type="linenumber">28</context>
         </context-group>
         <note priority="1" from="description">Title of page for management dashboard</note>
       </trans-unit>
@@ -262,7 +271,7 @@
         <source>Ventas</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">41</context>
+          <context context-type="linenumber">35</context>
         </context-group>
         <note priority="1" from="description">Title of page for management of sales</note>
       </trans-unit>
@@ -270,7 +279,7 @@
         <source>Productos</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">49</context>
+          <context context-type="linenumber">43</context>
         </context-group>
         <note priority="1" from="description">Title of page for management of products</note>
       </trans-unit>
@@ -278,7 +287,7 @@
         <source>Clientes</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">57</context>
+          <context context-type="linenumber">51</context>
         </context-group>
         <note priority="1" from="description">Title of page for management of customers</note>
       </trans-unit>
@@ -286,7 +295,7 @@
         <source>Vendedores</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">65</context>
+          <context context-type="linenumber">59</context>
         </context-group>
         <note priority="1" from="description">Title of page for management of salespeople</note>
       </trans-unit>
@@ -294,7 +303,7 @@
         <source>Usuarios</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">73</context>
+          <context context-type="linenumber">67</context>
         </context-group>
         <note priority="1" from="description">Title of page for management of users</note>
       </trans-unit>
@@ -302,7 +311,7 @@
         <source>Imágenes</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">81</context>
+          <context context-type="linenumber">75</context>
         </context-group>
         <note priority="1" from="description">Title of page for management of images</note>
       </trans-unit>
@@ -310,7 +319,7 @@
         <source>Repartidores</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/management/management-routing.module.ts</context>
-          <context context-type="linenumber">89</context>
+          <context context-type="linenumber">83</context>
         </context-group>
         <note priority="1" from="description">Title of page for management of shippers</note>
       </trans-unit>
@@ -809,7 +818,7 @@
         </context-group>
         <note priority="1" from="description">Name of field for product name</note>
       </trans-unit>
-      <trans-unit id="beded590d746b7543eaf1c87419ad1391933b5de" datatype="html">
+      <trans-unit id="eec715de352a6b114713b30b640d319fa78207a0" datatype="html">
         <source>Descripción</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/shared/components/product-form/product-form.component.html</context>
@@ -1279,6 +1288,14 @@
         </context-group>
         <note priority="1" from="description">Label to hint user that they can click away from current dialog to close it</note>
       </trans-unit>
+      <trans-unit id="abe0be5bf27db443c88348b35e87db4bff94a082" datatype="html">
+        <source>Continuar como invitado</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/store/dialogs/guest-shipping-form/store-guest-shipping-form-dialog.component.html</context>
+          <context context-type="linenumber">8</context>
+        </context-group>
+        <note priority="1" from="description">Title of dialog prompt to indicate personal info for a guest, temporary login</note>
+      </trans-unit>
       <trans-unit id="ac304d6774b7c75182c4ced24a043b207625cced" datatype="html">
         <source>A continuación, por favor indique sus datos de facturación.</source>
         <context-group purpose="location">
@@ -1319,7 +1336,7 @@
           <context context-type="linenumber">23</context>
         </context-group>
         <note priority="1" from="description">Name of field for password to log in with</note>
-        <note priority="1" from="meaning">password field</note>
+        <note priority="1" from="meaning">login password</note>
       </trans-unit>
       <trans-unit id="0ca82f8afb9e46eb04458b460efc655a36c0bfb3" datatype="html">
         <source>Mantenga presionado para ver...</source>
@@ -1411,6 +1428,7 @@
           <context context-type="linenumber">9</context>
         </context-group>
         <note priority="1" from="description">Title of widget displaying contents of cart</note>
+        <note priority="1" from="meaning">cart contents review</note>
       </trans-unit>
       <trans-unit id="43a86e2136a146bb60497dffda7dc3ac7927280f" datatype="html">
         <source>Subtotal</source>
